--- a/lohost/lohost.API/website/index.html
+++ b/lohost/lohost.API/website/index.html
@@ -27,18 +27,18 @@
             <div class="group">
                 <h3>What is lohost?</h3>
                 <p>Simply put, lohost is a way to serve a website to the internet from any local computer where you install the lohost website client.</p>
-                <p>You keep all the files on your local computer and pick the URL where the website sits, in the form https://{yourURL}.lohost.io</p>
+                <p>You keep all the files on your local computer and pick the subdomain where the website lives (https://{yourApp}.lohost.io)</p>
             </div>
             <div class="group">
                 <h3>Why is this useful?</h3>
                 <p>You get total control over your website and all it's data. You pick the URL where you want it hosted, you remain completely anonymous and if you want to totally remove the website from the internet, turn off the website client on your computer.</p>
                 <p>Conversely, you can distribute the website over multiple computers. If one computer goes down, the others will immediately pick up the slack.</p>
-                <p>You can also run different URL routes across different computers and it will appear as one seamless site to visiting users.</p>
+                <p>You can also distribute the site accross as many computers as you like. You can make different website clients serve different URL routes across different computers and it will appear as one seamless site to visiting users.</p>
             </div>
             <div class="group">
                 <h3>Getting started</h3>
                 <p>Download the website client installer from this page and install it on your computer (currently windows only sorry).</p>
-                <p>Pick a location to install lohost and once installed, run the .exe through a command prompt. This will assign you a random lohost url and run the default website from you computer.</p>
+                <p>Pick a location to install lohost and once installed, run the .exe through a command prompt. This will assign you a random lohost url and run the default website from your computer.</p>
                 <p>The default website will give you more information about how to configure and serve your own website with lohost.</p>
             </div>
         </div>
