--- a/lohost/lohost.API/website/index.html
+++ b/lohost/lohost.API/website/index.html
@@ -13,11 +13,11 @@
         <div class="content">
             <div><a href="https://github.com/gmarland/lohost.io" target="_blank"><img id="github-link" src="/img/GitHub.png" border="0" /></a></div>
             <h1>lohost</h1>
-            <h2>Anonymized and decentralized<br />local website hosting</h2>
+            <h2>Distributed, decentralized and anonymized<br />local website hosting</h2>
             <hr />
             <div id="links-bar">
                 <div class="left"><a href="">Download website client installer</a></div>
-                <div class="right"><a href="/sites">View currently listed online sites</a></div>
+                <div class="right"><a href="/listings.html">View currently listed online sites</a></div>
                 <div class="clear"></div>
             </div>
         </div>
