--- a/lohost/lohost.Client/website/config.html
+++ b/lohost/lohost.Client/website/config.html
@@ -33,7 +33,7 @@
                 <h3>Options</h3>
                 <p><b>ApplicationId (Required)</b></p>
                 <p>This is the subdomain that the website will sit on lohost, https://{ApplicationId}.lohost.io. If the ApplicationId is already in use, the application will go into polling mode and check every 5 seconds if it now available.</p>
-                <p>Certain characters are not allowed as part of the ApplicationId: . ? / \ &</p>
+                <p>Certain characters are not allowed as part of the ApplicationId: . ? / \ & #</p>
                 <br />
                 <p><b>ApplicationKey (Optional)</b></p>
                 <p>The ApplicationKey is optional but is needed to relate different running lohost.exe instances. If the ApplicationId and the ApplicationKey are the same it is assumed they are the same application.</p>
