--- a/lohost/lohost.API/website/index.html
+++ b/lohost/lohost.API/website/index.html
@@ -31,7 +31,7 @@
             </div>
             <div class="group">
                 <h3>Why is this useful?</h3>
-                <p>You get total control over your website and all it's data. You pick the URL where you want it hosted, you remain completely anonymous and if you want to totally remove the website from the internet, turn off the website client on your computer.</p>
+                <p>You get total control over your website and all its data. You pick the URL where you want it hosted, you remain completely anonymous and if you want to totally remove the website from the internet, turn off the website client on your computer.</p>
                 <p>Conversely, you can distribute the website over multiple computers. If one computer goes down, the others will immediately pick up the slack.</p>
                 <p>You can also distribute the site across as many computers as you like. You can make different website clients serve different URL routes across different computers and it will appear as one seamless site to visiting users.</p>
             </div>
