--- a/lohost/lohost.Client/website/index.html
+++ b/lohost/lohost.Client/website/index.html
@@ -49,7 +49,7 @@
             </div>
             <div class="group">
                 <h3>Moving/distributing your website</h3>
-                <p>The lohost application is entirely self contained to the lohost folder. If you want to move the application to another computer/folder, you just need to move the lohost folder. </p>
+                <p>The lohost application is entirely self-contained to the lohost folder. If you want to move the application to another computer/folder, you just need to move the lohost folder. </p>
                 <p>If you copy the lohost folder to another computer/folder and then run the lohost.exe it will become a backup for your website. If you stop one lohost.exe the other will take over and this can be done across any number of computers.</p>
                 <p>You can also make different routes be served by different lohost.exe instances. If you want https://{yourURL}.lohost.io/route1 to be served from computer and https://{yourURL}.lohost.io/route2 be served from another, this can be done via the config.json file.</p>
             </div>
