final bug tweaking

--- a/lohost/lohost.Client/website/config.html
+++ b/lohost/lohost.Client/website/config.html
@@ -48,7 +48,7 @@
                 <p><b>IsListed (Required)</b></p>
                 <p>This config option determines if your website is listed on the lohost.io website, by default it is false.</p>
                 <br />
-                <p><b>Name (Optional)</b></p>
+                <p><b>Name (Optional but Required to be listed)</b></p>
                 <p>This option is only used if the IsListed parameter is set to true. This is the name that your website will be listed as on the lohost.io website.</p>
                 <br />
                 <p><b>Tags (Optional)</b></p>
