--- a/lohost/lohost.Client/website/index.html
+++ b/lohost/lohost.Client/website/index.html
@@ -56,7 +56,7 @@
             <div class="group">
                 <h3>Limitations</h3>
                 <p>Currently, the only file types supported are those that are used to run a website, so .css, .html, .js, .jpg, .png, .gif and .json. This is pretty easy to extend in the future to any type of file type but those are a good starting point.</p>
-                <p>Also, documents are restricted to 1MB. This is configured in the lohost.io website API and can potentially be made infinitely large. Sharing is caring though and the limit is placed as to make lohost.io open to all. Should you want to run your own lohost server, you can open it to any amount!</p>
+                <p>Also, documents are restricted to 1MB. This is configured in the lohost.io website API and can potentially be made infinitely large. Sharing is caring though and the limit is placed as to make lohost.io open to all. Should you want to run your own lohost API, you can open it to any amount!</p>
             </div>
             <div class="group">
                 <h3>Stay in touch!</h3>
