adding download link

--- a/lohost/lohost.API/website/index.html
+++ b/lohost/lohost.API/website/index.html
@@ -16,7 +16,7 @@
             <h2>Distributed, decentralized and anonymized<br />local website hosting</h2>
             <hr />
             <div id="links-bar">
-                <div class="left"><a href="">Download website client installer</a></div>
+                <div class="left"><a href="https://github.com/gmarland/lohost/releases/download/v0.1-beta/setup.exe" target="_blank">Download website client installer</a></div>
                 <div class="right"><a href="/listings.html">View currently listed online sites</a></div>
                 <div class="clear"></div>
             </div>
