--- a/lohost/lohost.API/website/index.html
+++ b/lohost/lohost.API/website/index.html
@@ -37,7 +37,7 @@
             </div>
             <div class="group">
                 <h3>Getting started</h3>
-                <p>Download the website client installer from this page and install it on your computer (currently windows only sorry).</p>
+                <p>Download the website client installer from this page and install it on your computer (currently windows only sorry). *** IMPORTANT *** You will need to unblock the setup.exe once downloaded.</p>
                 <p>Pick a location to install lohost and once installed, run the .exe through a command prompt. This will assign you a random lohost url and run the default website from your computer.</p>
                 <p>The default website will give you more information about how to configure and serve your own website with lohost.</p>
             </div>
